fix(default-style): Re added default CSS class #108

--- a/public/css/brands.css
+++ b/public/css/brands.css
@@ -63,6 +63,12 @@ button {
 /* Brand Styles
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
+/* Default */
+.button.button-default {
+  color: #ffffff;
+  background-color: #0085ff;
+}
+
 /* Discord */
 .button.button-discord {
   color: #ffffff;
