Bio New Line + Link Support
Up to 4 BIO lines and 1 link with variables:

- BIO_2
- BIO_3
- BIO_4
- BIO_LINK

--- a/public/css/dark.css
+++ b/public/css/dark.css
@@ -181,3 +181,14 @@ hr {
   margin-top: 36px;
   padding-bottom: 36px;
 }
+
+
+/* Bio
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+.bio {
+  margin-bottom: 2.5rem;
+}
+
+.bio p {
+  margin-bottom: 0px;
+}
