--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -75,13 +75,13 @@ html is set to 62.5% so that all the REM measurements throughout Skeleton
 are based on 10px sizing. So basically 1.5rem = 15px :) */
 html {
   font-size: 100%; }
-body {
+/* body {
   background: linear-gradient(to right, env(CUSTOM_THEME_COLOUR, #838383), env(CUSTOM_THEME_COLOUR, #838383)), url(common-bg.svg);
   font-size: 18px;
   line-height: 24px;
   font-weight: 400;
   font-family: "Open Sans", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #FFFFFF; }
+  color: #FFFFFF; } */
 
 
 /* Typography
