--- a/public/css/brands.css
+++ b/public/css/brands.css
@@ -356,3 +356,9 @@ button {
   color: #000;
   background-color: #fff;
 }
+
+/* trakt */
+.button.button-trakt {
+  color: #fff;
+  background-color: #000;
+}
