Updating bg img

--- a/public/css/georgie.css
+++ b/public/css/georgie.css
@@ -50,7 +50,11 @@
 
 html {
     font-size: 100%;
-    background-image: url("https://lh3.googleusercontent.com/TxGfbB-Bq1I_mJopVV6d5_m5abx6Pllyz-tHBCbdtJhhsN5G9AEJg6fSK_sxUw8QJgMsZsJ6nYNDnk7twEr5DrvoBom9L5cFFNt-g79FCLf3U-3a_nlCssXdjDdTMbUADgximuubwCmdKajwvAGNmz0Z7A-3rs3mxYqkOaNrPxKn08J6SHfe_HIpLdwa0FdxT0_CmhG7gcyZwznQ0fKpu2r5KrdXEY2j7wL26X4F5B9SNaXsz1j9qBg53Xl0Y-kLfm1CTIThunuhVANGINRtMZsFyood4S4hLvyM2XSve-POYdPvyL3_vHAzM3BOCIgMl5zh4gYYdA-sdZ0skjGZLfDSwm2VusqoepLesJyMxnLRV4l5mjuJam7mz_ZVb79sS1qloNpxByjXCbd8490P6Ebjbc76oMkO9tWPbWcjGeplr2D59ecNfzj-YDV3M03178Rts1XbTiYNZQDJ3PFoDuRjJz7AljW5z_TwYb4Quy6X389-rZeUvwfAeQXyU88qY1E9yVIqju4SNwKtD7SQkwheB6bUcdhA7w4rwWm_IFgeKQ23DZalwR_DlseGWQSuIfXjeauR4KxSH2p2VOeP2sJYGx655X4xpWK27U_poUZsbme9hWI7hnX8nYu7VYHkezAo_YYDIzzc57HFErqAQ4q39G8YFY-xiJlMTt6zBFDx0vT3QW2o1HYl_orjpS7j1QlqhbXz5WYoChj681mTaSZ4YUHMbQpb3kCXNvmYzfy-_f_akX91MUVsAd4=w1319-h880-no?authuser=0");
+    background-image: url("https://lh3.googleusercontent.com/TxGfbB-Bq1I_mJopVV6d5_m5abx6Pllyz-tHBCbdtJhhsN5G9AEJg6fSK_sxUw8QJgMsZsJ6nYNDnk7twEr5DrvoBom9L5cFFNt-g79FCLf3U-3a_nlCssXdjDdTMbUADgximuubwCmdKajwvAGNmz0Z7A-3rs3mxYqkOaNrPxKn08J6SHfe_HIpLdwa0FdxT0_CmhG7gcyZwznQ0fKpu2r5KrdXEY2j7wL26X4F5B9SNaXsz1j9qBg53Xl0Y-kLfm1CTIThunuhVANGINRtMZsFyood4S4hLvyM2XSve-POYdPvyL3_vHAzM3BOCIgMl5zh4gYYdA-sdZ0skjGZLfDSwm2VusqoepLesJyMxnLRV4l5mjuJam7mz_ZVb79sS1qloNpxByjXCbd8490P6Ebjbc76oMkO9tWPbWcjGeplr2D59ecNfzj-YDV3M03178Rts1XbTiYNZQDJ3PFoDuRjJz7AljW5z_TwYb4Quy6X389-rZeUvwfAeQXyU88qY1E9yVIqju4SNwKtD7SQkwheB6bUcdhA7w4rwWm_IFgeKQ23DZalwR_DlseGWQSuIfXjeauR4KxSH2p2VOeP2sJYGx655X4xpWK27U_poUZsbme9hWI7hnX8nYu7VYHkezAo_YYDIzzc57HFErqAQ4q39G8YFY-xiJlMTt6zBFDx0vT3QW2o1HYl_orjpS7j1QlqhbXz5WYoChj681mTaSZ4YUHMbQpb3kCXNvmYzfy-_f_akX91MUVsAd4=w1319-h880-no?authuser=0") no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
 body {
