--- a/public/css/brands.css
+++ b/public/css/brands.css
@@ -190,8 +190,8 @@ button {
 
 /* Spotify */
 .button.button-spotify {
-  color: #ffffff;
-  background-color: #000000;
+  color: #000000;
+  background-color: #ffffff;
 }
 
 /* Steam */
