--- a/public/css/georgie.css
+++ b/public/css/georgie.css
@@ -14,6 +14,7 @@
     background-color: rgb(0, 0, 0, .85);
     border-style: solid;
     border-color: rgb(0, 0, 0, .85);
+    margin: 3rem 0 3rem 0;
 }
 
 .me {
