--- a/public/css/brands.css
+++ b/public/css/brands.css
@@ -47,8 +47,9 @@ button {
 }
 
 @media (min-width: 550px) {
+
   .button,
-  button { 
+  button {
     font-size: 1.3rem;
     width: 23rem;
     margin-bottom: 1.5rem;
@@ -93,15 +94,13 @@ button {
 /* Facebook Messenger */
 .button.button-facebookmessenger {
   color: #ffffff;
-  background-image: linear-gradient(
-  25deg,
-  #0099ff,
-  #5f5dff,
-  #a033ff,
-  #c740cc,
-  #ff5280,
-  #ff7061
-);
+  background-image: linear-gradient(25deg,
+      #0099ff,
+      #5f5dff,
+      #a033ff,
+      #c740cc,
+      #ff5280,
+      #ff7061);
 }
 
 /* Figma */
@@ -123,7 +122,8 @@ button {
 }
 
 /* Instagram */
-.button.button-instagram {
+.button.button-instagram,
+.button.button-instagram-alt {
   color: #ffffff;
   background-image: linear-gradient(-135deg, #1400c8, #b900b4, #f50000);
 }
@@ -319,6 +319,7 @@ button {
   background-color: #f8f9f9;
   font-weight: 100;
 }
+
 .button.button-stackoverflow:after {
   content: "overflow";
   font-weight: 700;
