--- a/public/css/brands.css
+++ b/public/css/brands.css
@@ -417,8 +417,8 @@ button {
   background-color: #000;
 }
 
-/* Amazon Affiliate */
-.button.button-affiliate {
+/* Amazon  */
+.button.button-amazon {
   color: #000;
   background-color: #fff;
 }
