--- a/public/css/brands.css
+++ b/public/css/brands.css
@@ -422,3 +422,9 @@ button {
   color: #000;
   background-color: #fff;
 }
+
+/* Apple Music  */
+.button.button-applemusic {
+  color: #fa425a;
+  background-color: #fff;
+}
