Added Buttons and Edit Letterboxd (#140)
* Added Amazon Affiliate

* Added Amazon Affilate and Wishlist

* Added Apple Music

* Added Status

* Rename LetterBoxd to Letterboxd

--- a/public/css/brands.css
+++ b/public/css/brands.css
@@ -417,3 +417,20 @@ button {
   background-color: #000;
 }
 
+/* Amazon  */
+.button.button-amazon {
+  color: #000;
+  background-color: #fff;
+}
+
+/* Apple Music  */
+.button.button-applemusic {
+  color: #fa425a;
+  background-color: #fff;
+}
+
+/* Apple Music  */
+.button.button-status {
+  color: #000;
+  background-color: #fff;
+}
