Fix shazam typo

--- a/public/css/brands.css
+++ b/public/css/brands.css
@@ -453,7 +453,7 @@ button {
   background-color: #fff
 }
 
-/* Shazaom */
+/* Shazam */
 .button.button-shazam {
   color: #fff;
   background-color: #1f5bfc
