--- a/public/css/brands.css
+++ b/public/css/brands.css
@@ -452,3 +452,9 @@ button {
   color: #000;
   background-color: #fff
 }
+
+/* Shazam */
+.button.button-shazam {
+  color: #fff;
+  background-color: #1f5bfc
+}
