Added TPDB - Fix image

--- a/public/css/brands.css
+++ b/public/css/brands.css
@@ -464,3 +464,9 @@ button {
   color: #fff;
   background-color: #000
 }
+
+/* TPDB */
+.button.button-tpdb {
+  color: #fff;
+  background-color: #FA6940
+}
