--- a/public/css/brands.css
+++ b/public/css/brands.css
@@ -34,6 +34,7 @@ button {
   display: inline-block;
   text-decoration: none;
   height: 48px;
+  box-shadow: 5px 5px 5px #0000006e;
   text-align: center;
   vertical-align: middle;
   font-size: 18px;
