feat: Add 500px (#264)
* feat: Add 500px

* fix: Image

* fix: Move to bottom

* fix: Lint

* fix: Move logo

* fix: Move to bottom for real

--- a/public/css/brands.css
+++ b/public/css/brands.css
@@ -526,3 +526,9 @@ button {
   color: #133a95;
   background-color: #fff
 }
+
+/* 500px */
+.button.button-500px {
+  color: #000;
+  background-color: #fff
+}
