Add prusa printables button

--- a/public/css/brands.css
+++ b/public/css/brands.css
@@ -544,3 +544,9 @@ button {
   color: #000;
   background-color: #fff;
 }
+
+/* printables */
+.button.button-printables {
+  color: #000;
+  background-color: #eb5405;
+}
