updated files as per contribution guide

--- a/public/css/brands.css
+++ b/public/css/brands.css
@@ -550,3 +550,9 @@ button {
   color: #000;
   background-color: #eb5405;
 }
+
+/* phone */
+.button.button-phone {
+  color: #000;
+  background-color: #33b5e5;
+}
