Add Serializd Button (#408)
* Add Serializd Button

* FIx prettier issues

* Fix lint issues

* FIx lint issues

--- a/public/css/brands.css
+++ b/public/css/brands.css
@@ -310,6 +310,7 @@ button {
   background-color: #f8f9f9;
   font-weight: 100;
 }
+
 .button.button-stackoverflow:after {
   content: "overflow";
   font-weight: 700;
@@ -549,4 +550,10 @@ button {
 .button.button-printables {
   color: #000;
   background-color: #eb5405;
+}
+
+/* serializd */
+.button.button-serializd {
+  color: #57c2ad;
+  background-color: #0a0c0e;
 }
