--- a/public/css/brands.css
+++ b/public/css/brands.css
@@ -557,3 +557,9 @@ button {
   color: #57c2ad;
   background-color: #0a0c0e;
 }
+
+/* threads */
+.button.button-threads {
+  color: #ffffff;
+  background-color: #000000;
+}
