Add Apple Podcasts

--- a/public/css/brands.css
+++ b/public/css/brands.css
@@ -69,6 +69,17 @@ button {
   background-color: #0085ff;
 }
 
+/* Apple Podcasts */
+.button.button-apple-podcasts {
+  color: #ffffff;
+  background-color: #000000;
+  border: 1px solid #FFFFFF;
+}
+.button.button-apple-podcasts:hover,
+.button.button-apple-podcasts:focus {
+  filter: brightness(90%);
+}
+
 /* Discord */
 .button.button-discord {
   color: #ffffff;
