--- a/public/css/brands.css
+++ b/public/css/brands.css
@@ -195,6 +195,15 @@ button {
   background-color: #ffffff;
 }
 
+/* Overcast */
+.button.button-overcast {
+  color: #000000;
+  border-style: solid;
+  border-color: #b8c3c9;
+  border-width: 1px;
+  background-color: #ffffff;
+}
+
 /* Reddit */
 .button.button-reddit {
   color: #000000;
