--- a/public/css/brands.css
+++ b/public/css/brands.css
@@ -155,6 +155,12 @@ button {
   background-color: #ffe2eb;
 }
 
+/* RSS */
+.button.button-rss {
+  color: #ffffff;
+  background-color: #FF9800;
+}
+
 /* Producthunt */
 .button.button-producthunt {
   color: #da552f;
