--- a/public/css/brands.css
+++ b/public/css/brands.css
@@ -668,3 +668,9 @@ button {
   color: #C2410C;
   background-color: #ffffff;
 }
+
+/* Orcid */
+.button.button-orcid {
+  color: #A6CE39;
+  background-color: #ffffff;
+}
